ingress/deployments.yaml
#
# Copyright 2019 Kevin Kuehl
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nto-server
  labels:
    app: hello-nto-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-nto-server
  template:
    metadata:
      labels:
        app: hello-nto-server
    spec:
      containers:
        - name: hello-nto-server
          image: us.gcr.io/ktlx-info-k8s-istio-1/hello-nto:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nto-server
  labels:
    app: ingress-nto-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nto-server
  template:
    metadata:
      labels:
        app: ingress-nto-server
    spec:
      containers:
        - name: ingress-nto-server
          image: us.gcr.io/ktlx-info-k8s-istio-1/ingress-nto:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-hello-server
  labels:
    app: gcp-hello-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcp-hello-server
  template:
    metadata:
      labels:
        app: gcp-hello-server
    spec:
      containers:
        - name: gcp-hello-server
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
