ingress/services.yaml
#
# Copyright 2019 Kevin Kuehl
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
---
apiVersion: v1
kind: Service
metadata:
  name: hello-nto-nodeport
spec:
  type: NodePort
  selector:
    app: hello-nto-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nto-nodeport
spec:
  type: NodePort
  selector:
    app: ingress-nto-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gcp-hello-nodeport
spec:
  type: NodePort
  selector:
    app: gcp-hello-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
