ingress/ingress.yaml
#
# Copyright 2019 Kevin Kuehl
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-nto-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: gcp-hello-nodeport
          servicePort: 8080
      - path: /hello/*
        backend:
          serviceName: hello-nto-nodeport
          servicePort: 8080
      - path: /debug/*
        backend:
          serviceName: ingress-nto-nodeport
          servicePort: 8080
